[tool]
[tool.pdm]

[project]
name = "Pantastic"
version = "0.1.0"
description = "Scan a system for credit card PANs"
authors = [
    {name = "Chris Read", email = "centurix@gmail.com"},
]
dependencies = [
    "click>=8.1.3",
    "chardet>=5.1.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
